--- a/stranica1.html
+++ b/stranica1.html
@@ -15,7 +15,7 @@
 }
 
 header{
-    width: 390px;
+    width: 395px;
     height: 70px;
     background-color: #0F919C;
     display: flex;
@@ -25,8 +25,8 @@ header{
 }
 
 main{
-    width: 390px;
-    height: 625px;
+    width: 395px;
+    height: 630px;
     background: #6DA5C0;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -47,18 +47,20 @@ main{
 footer{
     display: flex;
     align-items: end;
-    width: 390px;
+    width: 395px;
     height: 100px;
+    overflow-y: hidden;
 }
 
 .block-navigation{
-    width: 390px;
+    width: 395px;
     height: 100px;
     background-color: #0F919C;
     display: flex;
     position: fixed;
     flex-direction: row;
     border-top: 2px solid white;
+    overflow-y: hidden;
 }
 
 .block{
