--- a/stranica1.html
+++ b/stranica1.html
@@ -12,6 +12,7 @@
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
 }
 
 header{
@@ -95,7 +96,7 @@ footer{
 <div class="stranica">
 <header>
     <div class="logo-block">
-        <h1>test5</h1>
+        <h1>test6</h1>
     </div>
 </header>
 <main>
