--- a/stranica1.html
+++ b/stranica1.html
@@ -54,7 +54,6 @@ main{
     height: 50px;
     display: flex;
     justify-content: space-around;
-    /* margin-top: 310px; */
     margin-top: 30px;
     color: white;
 }
@@ -62,6 +61,7 @@ main{
 .img-post{
     overflow: hidden;
     height: 280px;
+    border-bottom: 3px solid white;
 }
 
 .like{
@@ -128,7 +128,7 @@ footer{
 <div class="stranica">
 <header>
     <div class="logo-block">
-        <h1>Test8</h1>
+        <h1>Test9</h1>
     </div>
 </header>
 <main>
@@ -437,16 +437,16 @@ footer{
 <footer>
     <div class="block-navigation">
         <div class="block1">
-            <a href="" class="block"><ion-icon class="icons" name="home"></ion-icon></a>
+            <a href="stranica1.html" class="block"><ion-icon class="icons" name="home"></ion-icon></a>
         </div>
         <div class="block2">
-            <a href="" class="block"><ion-icon class="icons" name="search"></ion-icon></a>
+            <a href="search.html" class="block"><ion-icon class="icons" name="search"></ion-icon></a>
         </div>
         <div class="block3">
             <a href="" class="block"><ion-icon class="icons" name="albums"></ion-icon></a>
         </div>
         <div class="block4">
-            <a href="" class="block"><ion-icon class="icons" name="person"></ion-icon></a>
+            <a href="profile.html" class="block"><ion-icon class="icons" name="person"></ion-icon></a>
         </div>
     </div>
 </footer>
