--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@ main{
 
 .person-infa{
     text-align: center;
-    color: rgb(167, 245, 249);
+    color: rgb(179, 6, 6);
     font-family: sans-serif;
 }
 
@@ -136,7 +136,7 @@ footer{
     <ion-icon class="icon-person" name="person"></ion-icon>
 </div><br><br>
 <div class="person-infa">
-    <h3><span>Nick-Name:</span> Hamidzoda Ismoil<br><br><span>Age:</span> 19 years old<br><br><span>Status:</span> Owner</h3>
+    <h3><span>Nick-Name:</span> undefined<br><br><span>Age:</span> undefined years old<br><br><span>Status:</span> undefined</h3>
 </div>
 </main>
 <footer>
