--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,6 @@ height: 100vh;
 background: url('kartinka/glavfone.jpg') no-repeat;
 background-size: cover;
 background-position: center;
-animation: animateBg 5s linear infinite;
 }
 
 @keyframes animateBg {
@@ -58,7 +57,7 @@ backdrop-filter: blur(15px);
 
 h2 {
 font-size: 2em;
-color: #fff;
+color: #3c8a2a;
 text-align: center;
 }
   
@@ -75,7 +74,7 @@ top: 50%;
 left: 5px;
 transform: translateY(-50%);
 font-size: 1em;
-color: #fff;
+color: #3c8a2a;
 pointer-events: none;
 transition: .5s;
 }
@@ -100,7 +99,7 @@ padding: 0 35px 0 5px;
 .input-box .icon {
 position: absolute;
 right: 8px;
-color: #fff;
+color: #3c8a2a;
 font-size: 1.2em;
 line-height: 57px;
 }
@@ -110,7 +109,7 @@ margin: -15px 0 15px;
 display: flex; 
 justify-content: space-between;
 font-size: .9em;
-color: #fff;
+color: #3c8a2a;
 }
 
 .remember-forgot label input { 
@@ -118,7 +117,8 @@ color: #fff;
 }
 
 .remember-forgot a { 
-  color: #fff; text-decoration: none; 
+  color: #fff; 
+  text-decoration: none; 
 }
   
 .remember-forgot a:hover { 
@@ -168,7 +168,7 @@ font-weight: 600;
 <body>
   
   <section>
-    <h1>IziWeb</h1>
+    <h1>Instajram</h1>
  <div class="login-box">
   <form action="">
    <h2>Registration</h2>
