--- a/stranica1.html
+++ b/stranica1.html
@@ -198,7 +198,7 @@ footer{
             <a href="search.html" class="block"><ion-icon class="icons" name="search"></ion-icon></a>
         </div>
         <div class="block3">
-            <a href="" class="block"><ion-icon class="icons" name="albums"></ion-icon></a>
+            <a href="uploadpublication.html" class="block"><ion-icon class="icons" name="albums"></ion-icon></a>
         </div>
         <div class="block4">
             <a href="profile.html" class="block"><ion-icon class="icons" name="person"></ion-icon></a>
