--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
 
 header{
     z-index: 100;
-    width: 395px;
+    /* width: 395px; */
     height: 7%;
     background-color: #0F919C;
     display: flex;
@@ -42,7 +42,7 @@ header{
 main{
     padding-top: 50px;
     padding-bottom: 20px;
-    width: 395px;
+    /* width: 395px; */
     height: 82%;
     background: #6DA5C0;
     overflow-y: scroll;
@@ -61,7 +61,7 @@ main{
     border-radius: 100px;
     background-color: rgb(193, 209, 209);
     margin-top: 100px;
-    margin-left: 35%;
+    margin-left: 40%;
 }
 
 .icon-person{
@@ -83,12 +83,12 @@ span{
 footer{
     display: flex;
     align-items: end;
-    width: 395px;
+    /* width: 395px; */
     height: 10.8%;
 }
 
 .block-navigation{
-    width: 395px;
+    /* width: 395px; */
     height: 90px;
     background-color: #0F919C;
     display: flex;
@@ -148,7 +148,7 @@ footer{
             <a href="search.html" class="block"><ion-icon class="icons" name="search"></ion-icon></a>
         </div>
         <div class="block3">
-            <a href="" class="block"><ion-icon class="icons" name="albums"></ion-icon></a>
+            <a href="uploadpublication.html" class="block"><ion-icon class="icons" name="albums"></ion-icon></a>
         </div>
         <div class="block4">
             <a href="profile.html" class="block"><ion-icon class="icons" name="person"></ion-icon></a>
